Issue #3137100 by krystalcode: Add group content enabler plugin for products

--- a/gcommerce.info.yml
+++ b/gcommerce.info.yml
@@ -1,7 +1,7 @@
 name: Group Commerce
 description: Provides integration between the Group and Commerce suite of modules.
 type: module
-package: Group (Contrib)
+package: Commerce (Contrib)
 core_version_requirement: ^8.8 || ^9
 dependencies:
   - commerce:commerce
