--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,12 @@
     "drupal/core": "^8.8 | ^9",
     "drupal/commerce": "^2.17",
     "drupal/group": "^1.0@rc"
+  },
+  "extra": {
+    "patches": {
+      "drupal/group": {
+        "Group entity operations Views field plugin": "https://www.drupal.org/files/issues/2020-05-17/group.group-entity-operations-3137312-2.patch"
+      }
+    }
   }
 }
