Issue #3159195 by krystalcode: Limit carts to those belonging to the current user's current context

--- a/modules/context/gcommerce_context.services.yml
+++ b/modules/context/gcommerce_context.services.yml
@@ -10,6 +10,7 @@ services:
   gcommerce_context.hook.query_alter:
     class: 'Drupal\gcommerce_context\Hook\QueryAlter'
     arguments:
+      - '@config.factory'
       - '@gcommerce_context.manager'
       - '@current_user'
       - '@entity_type.manager'
