Issue #3166887 by krystalcode: Provide access control for split items

--- a/modules/split/gcommerce_split.info.yml
+++ b/modules/split/gcommerce_split.info.yml
@@ -4,4 +4,4 @@ description: Provides functionality for splitting order items between customers.
 package: Commerce (Contrib)
 core_version_requirement: ^8.8 || ^9
 dependencies:
-  - commerce:commerce_order
+  - commerce_cart_advanced:commerce_cart_advanced
